[gd_scene load_steps=6 format=3 uid="uid://77ca7obcfj4q"]

[ext_resource type="PackedScene" uid="uid://i46kulypue0k" path="res://scenes/game.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://b4d5srq0yakld" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://dbxk6yryi0x21" path="res://scenes/main_menu.tscn" id="3_jyhfs"]
[ext_resource type="AudioStream" uid="uid://2k188y57ikks" path="res://sounds/death.wav" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://bhe0mj5f77s4c" path="res://scripts/ui_sounds.gd" id="5_tbgi4"]

[node name="Main" type="Node"]
script = ExtResource("1_sugp2")
game = ExtResource("1_o5qli")

[node name="MainMenu" parent="." instance=ExtResource("3_jyhfs")]

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jyhfs")

[node name="UISounds" type="Node" parent="."]
process_mode = 3
script = ExtResource("5_tbgi4")

[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
